prepare 4.1.0 (#169)
* [Core] Add support of 'and' flags operations

usage : ["flag1 and flag2 and !flag3", /*or*/ "flag4", /*or*/ "!flag5"]

* [Core] Add assertions check in case of badly indented yaml configuration

* Update pom.xml

* [Code] Detect and warn some indent errors in yaml (with __flag__)

* [Core] Add Daemon threadPoolSize parameter

* [Core] Add Standard NamedThreadFactory for ExecutorsServices

* [Core] comment

* [Core] Optim send metrics (prepare batch size)

* [Core] Change default Gson : not pretty print

* [Core] Update SocketLoggerAnalytics plugin : optimisation debit, perfs

Add some options
- set hostname and port OR hostNameParam and portParam
- set batch event size, default 1 (wait batch size or 10s before sending)
- set layout : json (default) or objectSerialized (old)
- set compressed payload : for test may be removed soon
- set compressed stream : default true, use gzip

- better logs
- better shutdown
- some refactoring

* [Core] update socket analytics plugin params

* [core] Analytics socket plugin : fix mode json true/false and compress true/false

* [Core] update socket analytics plugin add bufferedOutputStream

* [core] Analytics socket plugin : dont send compressed size

look for pattern delimiter

* [Core] Fix stop analytics sheduler

* [core] Analytics better logs

* [Core] sonar

* [Core] prepare 4.1.0

* [Core] update libs

log4j 2.20.0 -> 2.21.1
snakeyaml 2.0 -> 2.2

* sonar

* sonar

* [Core] Update licence

* sonar

* sonar

* [Core] Fix list of aspect (can't be unmodifiable)

---------

Co-authored-by: Matthieu Laroche <matthieu.laroche@telecom-bretagne.eu>