@@ -21,7 +21,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
@@ -81,7 +80,7 @@ public final class AnalyticsManagerImpl implements AnalyticsManager, SimpleDefin
 						HealthUtil.createHealthCheckDefinitions(id, Node.getNode().getComponentSpace().resolve(id, CoreComponent.class), aopPlugin).stream(),
 						//metrics
 						MetricUtil.createMetricDefinitions(id, Node.getNode().getComponentSpace().resolve(id, CoreComponent.class), aopPlugin).stream()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	/*----------------- Process ------------------*/
